# snode.c

./: .clang-format  .clang-format-ignore  .clang-tidy  .clangd  .cmake-format.py  .gitattributes  .gitignore  .gitmodules  .main.cpp.kate-swp  CLI11-current.hpp  CLI11-format.hpp  CLI11.hpp  CMakeLists.txt  CMakeLists.txt.user.77d5be5  CMakeLists.txt.user.db914a6  CONFIG-JSON-EXPORT-report.md  Config.cmake.in  Doxyfile  InetAddress.cpp  InetAddress.h  LICENSE  LICENSE-MIT  README.md  README_dox.md  Response.cpp  client.cpp  dependencies.txt  experiments.cpp  http-status-codes-1.ods  logger.conf  main.cpp  mime-types.ods  mime-types.txt  posttest.cpp  simpleserver.cpp  testnewroute.cpp
apps/: CMakeLists.txt  btlowlevelclient.cpp  btlowlevelserver.cpp  btlowleveltlsclient.cpp  btlowleveltlsserver.cpp  client.cpp  client4.cpp  client6.cpp  client6clientcert.cpp  clientrfcomm.cpp  config.h.in  experiments.cpp  jsonclient.cpp  jsonserver.cpp  l2lowlevelclient.cpp  l2lowlevelserver.cpp  lowlevelclient.cpp  main.cpp  newlowlevelclient.cpp  posttest.cpp  simpleserver.cpp  simpleserver6.cpp  simpleserver6clientcert.cpp  simpleserverrfcomm.cpp  testparsers.cpp  testpipe.cpp  testpost.cpp  testregex.cpp  verysimpleserver.cpp  vhostserver.cpp  warema-jalousien.cpp  websocketclient.cpp  websocketparser.cpp
apps/html/: wsclient.js  wstest.html
apps/websocket/: CMakeLists.txt  echoclient.cpp  echoserver.cpp
express/: CMakeLists.txt  Config.cmake.in  Request.cpp  Request.h  Response.cpp  Response.h  Router.cpp  Router.h  WebApp.cpp  WebApp.h  WebAppT.h
express/legacy/: WebApp.cpp  WebApp.h
express/middleware/: JsonMiddleware.cpp  JsonMiddleware.h  StaticMiddleware.cpp  StaticMiddleware.h  VHost.cpp  VHost.h
express/tls/: WebApp.cpp  WebApp.h
http/: .Router.cpp.kate-swp  CMakeLists.txt  Client.h  ClientContext.cpp  ClientContext.h  ClientResponse.cpp  ClientResponse.h  ConnectionState.h  Cookie.cpp  Cookie.h  CookieOptions.h  HTTPClient.h  HTTPClientContext.cpp  HTTPClientContext.h  HTTPClientT.h  HTTPContext.cpp  HTTPContext.h  HTTPParser.cpp  HTTPParser.h  HTTPRequestParser.cpp  HTTPRequestParser.h  HTTPResponseParser.cpp  HTTPResponseParser.h  HTTPServer.cpp  HTTPServer.h  HTTPServerContext.cpp  HTTPServerContext.h  HTTPServerT.h  HTTPStatusCodes.cpp  HTTPStatusCodes.h  MimeTypes.cpp  MimeTypes.h  NewRouter.cpp  NewRouter.h  Parser.cpp  Parser.h  Request.cpp  Request.h  RequestParser.cpp  RequestParser.h  (+30 more)
http/client/: Client.h  ClientContext.cpp  ClientContext.h  ClientContext.hpp  ClientContextFactory.h  Request.cpp  Request.h  Response.cpp  Response.h  ResponseParser.cpp  ResponseParser.h
http/cmake/: FindLibMagic.cmake
http/legacy/: Client.h  HTTPClient.cpp  HTTPClient.h  HTTPClientT.h  HTTPServer.cpp  HTTPServer.h  HTTPServerT.h  Server.h  WebApp.cpp  WebApp.h
http/server/: HTTPServerContext.h  HTTPServerContext.hpp  Request.cpp  Request.h  RequestParser.cpp  RequestParser.h  Response.cpp  Response.h  Server.h  ServerContext.cpp  ServerContext.h  ServerContext.hpp  ServerContextBase.cpp  ServerContextBase.h
http/tls/: Client.h  HTTPClient.cpp  HTTPClient.h  HTTPClientT.h  HTTPServer.cpp  HTTPServer.h  Server.h  WebApp.cpp  WebApp.h
http/websocket/: WSReceiver.cpp  WSReceiver.h  WSServerContext.cpp  WSServerContext.h  WSTransCeiver.cpp  WSTransCeiver.h  WSTransmitter.cpp  WSTransmitter.h
log/: CMakeLists.txt  Config.cmake.in  Logger.cpp  Logger.h  SNLogger.cpp  SNLogger.h
log/cmake/: FindEASYLOGGINGPP.cmake
net/: AcceptEvent.cpp  AcceptEvent.h  AcceptEventDispatcher.cpp  AcceptEventDispatcher.h  AcceptEventReceiver.cpp  AcceptEventReceiver.h  AcceptedSocket.cpp  AcceptedSocket.h  BaseConnectedSocket.cpp  BaseConnectedSocket.h  CMakeLists.txt  ClientSocket.cpp  ClientSocket.h  Config.cmake.in  ConnectEventDispatcher.cpp  ConnectEventDispatcher.h  ConnectEventReceiver.cpp  ConnectEventReceiver.h  ConnectedSocket.cpp  ConnectedSocket.h  ContinousTimer.cpp  ContinousTimer.h  Cookie.cpp  Cookie.h  Descriptor.cpp  Descriptor.h  DescriptorEventDispatcher.cpp  DescriptorEventDispatcher.h  DescriptorEventReceiver.cpp  DescriptorEventReceiver.h  DynamicLoader.cpp  DynamicLoader.h  EventDispatcher.cpp  EventDispatcher.h  EventDispatcher.hpp  EventLoop.cpp  EventLoop.h  EventReceiver.cpp  EventReceiver.h  Exception.cpp  (+139 more)
net/bluetooth/: CMakeLists.txt
net/file/: File.cpp  File.h  FileReader.cpp  FileReader.h
net/ip/: CMakeLists.txt
net/ip6/: CMakeLists.txt  SocketAddress.cpp
net/ipv4/: CMakeLists.txt  InetAddress.cpp  InetAddress.h
net/ipv6/: CMakeLists.txt  InetAddress.cpp  InetAddress.h
net/l2/: CMakeLists.txt
net/l2cap/: CMakeLists.txt  L2CapAddress.cpp  L2CapAddress.h
net/legacy/: SocketLegacy.cpp  SocketLegacy.h  SocketLegacyConnection.cpp  SocketLegacyConnection.h  SocketLegacyReader.cpp  SocketLegacyReader.h  SocketLegacyServer.cpp  SocketLegacyServer.h  SocketLegacyWriter.cpp  SocketLegacyWriter.h
net/pipe/: Pipe.cpp  Pipe.h  PipeSink.cpp  PipeSink.h  PipeSource.cpp  PipeSource.h  Sink.cpp  Sink.h  Source.cpp  Source.h
net/rf/: CMakeLists.txt
net/rfcomm/: CMakeLists.txt  RfCommAddress.cpp  RfCommAddress.h
net/socket/: ClientSocket.cpp  ClientSocket.h  InetAddress.cpp  InetAddress.h  Socket.cpp  Socket.h  SocketAddress.h  SocketClient.h  SocketConnection.h  SocketConnectionBase.cpp  SocketConnectionBase.h  SocketListener.h  SocketReader.cpp  SocketReader.h  SocketReaderBase.cpp  SocketReaderBase.h  SocketServer.cpp  SocketServer.h  SocketServerBase.cpp  SocketServerBase.h  SocketWriter.cpp  (+3 more)
src/: CMakeLists.txt  Config.cmake.in  SemanticLog.h
tests/: CMakeLists.txt  CodexBinaryPackageTest.cmake  CodexSourcePackageTest.cmake  StagedInstalledConsumerTest.cmake
utils/: AttributeInjector.h  CMakeLists.txt  Config.cmake.in  SHA1.cpp  SHA1.h  Timeval.cpp  Timeval.h  base64.cpp  base64.h  instrumentation.cpp  sha1.cpp  sha1.h  stacktrace.cpp  stacktrace.h
web/: CMakeLists.txt  CookieOptions.h  MimeTypes.cpp  MimeTypes.h  Parser.cpp  Parser.h  StatusCodes.cpp  WSReceiver.cpp  WSTransmitter.cpp  WSTransmitter.h  config.h.in  http_utils.cpp
(+7803 files in other folders)
